<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_bloodlink"
    tools:context=".BloodLinkProfileActivity">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/circle_white"
            android:src="@drawable/arrow_black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:text="@string/profile2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">
        <View
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/carre_arc2"
            android:layout_alignParentBottom="true"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <!-- Image principale -->
            <ImageView
                android:id="@+id/img1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user"
                android:contentDescription="Photo de profil" />

            <!-- Bouton + placé en bas à droite de img1 -->
            <ImageView
                android:id="@+id/img2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/plus"
                android:contentDescription="Ajouter une photo"
                android:layout_alignBottom="@id/img1"
                android:layout_alignEnd="@id/img1"
                android:layout_margin="4dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/ll2"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Ariane Love"
            android:textColor="@color/red4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="toukaprayan6@gmail.com"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll3"
            >
            <TextView
                android:id="@+id/tval"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/gs2"
                android:textSize="24sp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ll3"
            android:orientation="horizontal"
            android:weightSum="6"
            android:visibility="visible"
            >
            <TextView
                android:id="@+id/Ap2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Ap"
                android:gravity="center"
                android:textColor="@color/red_bloodlink"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_marginHorizontal="2dp"
                />
            <TextView
                android:id="@+id/Am2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Am"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_marginHorizontal="2dp"
                />
            <TextView
                android:id="@+id/Bp2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Bp"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_marginHorizontal="2dp"
                />
            <TextView
                android:id="@+id/Bm2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/Bm"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_marginHorizontal="2dp"
                />
            <TextView
                android:id="@+id/ABp2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/ABp"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                />
            <TextView
                android:id="@+id/ABm2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/ABm"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_marginHorizontal="2dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            android:weightSum="6"
            android:visibility="visible">

            <TextView
                android:id="@+id/Op2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Op"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_toRightOf="@+id/ABm"
                android:layout_marginHorizontal="2dp"
                />
            <TextView
                android:id="@+id/Om2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/Om"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/btn_6"
                android:layout_toRightOf="@+id/Op"
                android:layout_marginHorizontal="2dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/img4"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/comme"
                android:layout_weight="1"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical"
                android:weightSum="2"
                >
                <TextView
                    android:id="@+id/tv11"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/dispo"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
                <TextView
                    android:id="@+id/tv12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/recep"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    />


            </LinearLayout>

                <ImageView
                    android:id="@+id/img12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/marche_arret"
                    />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="8"
                >
                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"

                    />
            <TextView
                android:id="@+id/tv7"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="7"
                android:textColor="@color/black"
                android:text="+237 658809090"
                android:textSize="18sp"
                android:textStyle="bold"

                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:weightSum="8"
                >
                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="0dp"

                    android:layout_height="20dp"
                    android:src="@drawable/localisateur"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tv8"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="7"
                    android:text="Ekounou"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll3"
        android:background="@color/white"
        />




</androidx.constraintlayout.widget.ConstraintLayout>