<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btn_gray2"
            android:weightSum="4"
            >
            <TextView
                android:id="@+id/tvHopital"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"

                android:text="Hopital central de yaounde"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"

                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tvMedecin"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Dr Smith"
                android:textColor="@color/black"

                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Groupe requis"
                    android:textColor="@color/black"

                    android:layout_marginStart="15dp"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/tvGroupe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/red_bloodlink"
                    android:textStyle="bold"
                    android:text="@string/Am"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:weightSum="8">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/localisateur"
                    />
                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:textColor="@color/black"
                    android:text="A 2,3 km de votre position"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/tvAccept"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:layout_margin="12dp"
                android:background="@drawable/btn_red2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tvRefuse"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/refuse"
                android:layout_margin="12dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_red2"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
