<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_bloodlink"
    tools:context=".BloodLinkAcceuilActivity">

    <ImageView
        android:id="@+id/bloodlink_icon2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/bloodblink_icon" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="BLOODLINK"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodlink_icon2"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:layout_width="130dp"
        android:onClick="startSelectRole"
        android:layout_height="60dp"
        android:background="@drawable/btn_red1"
        android:text="SKIP"
        android:textColor="@color/red_bloodlink"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/view_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/next_button"
            android:onClick="acceuil"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="72dp"
            android:background="@drawable/btn_red2"
            android:text="NEXT"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acceuil1"
                android:gravity="center"
                android:textColor="@color/red_bloodlink"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:visibility="visible"

               />
            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acceuil2"
                android:gravity="center"
                android:textColor="@color/red_bloodlink"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/textview3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acceuil3"
                android:gravity="center"
                android:textColor="@color/red_bloodlink"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="195dp"
            android:layout_height="40dp"
            android:layout_above="@+id/next_button"
            android:layout_below="@+id/layout1"
            android:layout_alignRight="@+id/next_button"
            android:layout_alignLeft="@+id/next_button"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            >
            <View
                android:id="@+id/view1"
                android:layout_width="40dp"
                android:layout_height="17dp"
                android:background="@drawable/btn_red2"
               android:layout_margin="5dp"
                />
            <View
                android:id="@+id/view2"
                android:layout_width="40dp"
                android:layout_height="17dp"
                android:background="@drawable/btn_gray2"
                android:layout_toRightOf="@+id/view1"
                android:layout_margin="5dp"
                />
            <View
                android:id="@+id/view3"
                android:layout_width="40dp"
                android:layout_height="17dp"
                android:background="@drawable/btn_gray2"
                android:layout_toRightOf="@+id/view2"
                android:layout_margin="5dp"

                />

        </RelativeLayout>



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>